# ryebot

./: LICENSE  README.md  pyproject.toml  setup.py
src/ryebot/: __main__.py  bot.py  core.py  errors.py  login.py  main.py  script_configuration.py  stopwatch.py  wiki_util.py
src/ryebot/scripts/: __init__.py  autolangsync.py  capsredirects.py  csscompile.py  excludata.py  extensionupdates.py  langinfodata.py  langsync.py  langsynccont.py  testscript.py  update_iteminfo.py  update_mapviewer_versions.py  update_npcinfo.py
