[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=7.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "ryebot"
dependencies = [
    "custom_mwclient @ git+https://github.com/h9a-rD4ubXs8/custom_mwclient.git@main",
    "mwparserfromhell~=0.6"
]
requires-python = ">=3.9"
dynamic = ["version"]

[tool.setuptools_scm]
